加入scala的单元测试